syntax = "proto3";

package proto.smm.v1;

import "google/protobuf/timestamp.proto";


// Сервис для работы с SMM через телеграм-бота
service SmmService {
  // Регистрирует нового пользователя на основе данных из Telegram
  rpc RegisterNewUser(RegisterNewUserRequest) returns (RegisterNewUserResponse);
  // Возвращает роль пользователя в системе
  rpc GetUserRole(GetUserRoleRequest) returns (GetUserRoleResponse);
}

// Данные пользователя, полученные из Telegram
message TelegramUser {
  // Уникальный идентификатор пользователя в Telegram
  // Должен быть положительным числом
  int64 telegram_id = 1;
  // Имя пользователя (обязательное поле в Telegram)
  // Минимальная длина - 1 символ, максимальная - 64 символа
  string first_name = 2;
  // Фамилия пользователя (необязательное поле в Telegram)
  optional string last_name = 3;
  // Юзернейм пользователя в Telegram (без @)
  // Должен соответствовать шаблону [a-zA-Z0-9_]{5,32}
  optional string username = 4;
  // Код языка пользователя в формате ISO 639-1 (например, "ru", "en")
  optional string language_code = 5;
}

// Роли пользователей в системе
enum UserRole {
  // Роль не определена (значение по умолчанию)
  USER_ROLE_GUEST_UNSPECIFIED = 0;
  // Редактор - может создавать и управлять своим контентом
  USER_ROLE_EDITOR = 1;
  // Администратор - полный доступ к системе
  USER_ROLE_ADMIN = 2;
}


// Пользователь системы
message User {
  // UUID пользователя в формате строки (версия 4)
  string id = 1;
  // Идентификатор пользователя в Telegram
  int64 telegram_id = 2;
  // Основное имя пользователя
  string first_name = 3;
  // Фамилия пользователя (если доступна)
  optional string last_name = 4;
  // Юзернейм в Telegram (если установлен)
  optional string username = 5;
  // Предпочитаемый язык пользователя
  optional string language_code = 6;
  // Текущая роль пользователя в системе
  UserRole role = 7;
  // Дата и время создания записи пользователя
  google.protobuf.Timestamp created_at = 8;
  // Дата и время последнего обновления данных
  google.protobuf.Timestamp updated_at = 9;
  // Дата и время последней активности пользователя
  google.protobuf.Timestamp last_activity = 10;
}

// Запрос на регистрацию нового пользователя
message RegisterNewUserRequest {
  // Данные пользователя из Telegram
  TelegramUser new_user = 1;
}

// Ответ на запрос регистрации пользователя
message RegisterNewUserResponse {
  // Созданная запись пользователя
  User created_user = 1;
}

// Запрос на получение роли пользователя
message GetUserRoleRequest {
  // Идентификатор пользователя в Telegram
  int64 user_id = 1;
}

// Ответ с информацией о роли пользователя
message GetUserRoleResponse {
  // Роль пользователя (актуально только если user_exists == true)
  optional UserRole user_role = 1;
}

message ChangeUserRoleRequest {
  int64 user_id = 1;
  UserRole new_role = 2;
}

message ChangeUserRoleResponse {
  optional User updated_user = 1;
}
